static/css/img.css
@import 'home.css';


#query {
    left: 20%;
    width: 60%;
}

#img_results_outer {
    position: fixed;
    left: 20%;
    top: 220px;
    width: 60%;
    height: 60%;
}

#img_results {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: flex-start;
    align-content: flex-start;
    overflow: scroll;
    scrollbar-width: none;
    width: 100%;
    height: 100%;
    justify-content: space-between;
}

.img_cont {
    display: flex;
    height: 150px;
    width: 33%;
    border: 2px solid gray;
    cursor: pointer;
    margin-bottom: 5px;
}

.img_cont:nth-child(3n+1):nth-last-child(-n+3) ~ .img_cont {
      margin-left:calc(1% * .5);
      margin-right: auto;
}

img {
    max-height: 100%;
    min-width: 100%;
    object-fit: cover;
    vertical-align: bottom;
}

.keyspan {
    display: none;
    position: absolute;
    background-color: rgba(255,255,255,0.6);
    padding: 6px;
}

.keyspan:after {
    content: ' 📋';
}

.keyspan.copied:after {
    content: ' ✓';
}

.img_cont:hover > .keyspan {
    display: block;
}

.dropzone {
    border: 1px dashed var(--hl-col);
    align-items: center;
    justify-content: center;
    font-family: fira;
    text-align: center;
}

.dropzone.dragover {
    border: 2px dashed var(--hl-col);
}

#display {
    display: none;
    position: fixed;
    background-color: gray;
    height: 88%;
    width: 60%;
    top: 3%;
    left: 20%;
}

#display_update {
    position: absolute;
    bottom: 0;
    width: 100%;
    font-size: 70%;
}

#display_update > input {
    position: relative;
    background-color: var(--bg-hl-col);
    color: var(--font-col-int);
    min-height: 30px;
    margin-bottom: 10px;
    left: 12%;
    font-size: 100%;
}

#display_image {
    position: absolute;
    width: 0%;
    left: 0%;
    max-height: 85%;
}

#display_upload {
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
    position: absolute;
    top: 20px;
    left: 20px;
    height: 40px;
    width: 40px;
    color: var(--pop-fg-col);
    background-color: white;
    border: 1px solid black;
    border-radius: 4px;
    padding: 5px;
    margin: 5px;
    font-size: 20px;
    cursor: default;
}

#display_upload:hover {
    background-color: lightgray;
}

.keywordtitle {
    position: absolute;
    width: 12%;
    padding-top: 10px;
    padding-right: 6px;
    left: 0%;
    text-align: right;
}

#key {
    width: 50%;
}

#keywords {
    width: 76%;
}

#display button {
    position: absolute;
    bottom: 0;
    top: unset;
    margin-bottom: 10px;
    width: 12%;
    height: 30px !important;
    font-size: 80%;
}

#img_update {
    right: 25%;
}

#img_delete {
    right: 12%;
}

@media only screen and (max-width: 1000px) {

#query{
    left: 10%;
    width: 80%;
    top: 85px;
}

#img_results_outer{
    top: 140px;
    width: 80%;
    left: 10%
}

}

@media only screen and (max-width: 600px) {

.img_cont {
    width: 49%;
}

.img_cont:nth-child(3n+1):nth-last-child(-n+3) ~ .img_cont {
      margin-left:unset;
      margin-right: unset;
}

}

